--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "*",
     "passport": "*",
     "passport-http": "*",
-    "passport-local": "*"
+    "passport-local": "*",
+    "superagent": "*"
   },
   "devDependencies": {}
 }
